test/scc/pp/errors/024.a
024.t:1:5: error: floating constant in preprocessor expression